--- a/Print_Score.xaml
+++ b/Print_Score.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Pfinal.Print_Score"
+<Window x:Class="Pfinal.Print_Score"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,9 +7,22 @@
         mc:Ignorable="d"
         Title="성적출력" Height="450" Width="800">
     <StackPanel>
-        <Label Content="성적출력" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20"/>
-        <Button Content ="새로고침" Margin="10,5,698,5" Click="Button_Click"/>
-        <ListView x:Name="Score_Viewer" VerticalAlignment="Center" HorizontalContentAlignment="Left"/>
-
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Label Content="성적출력" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"/>
+            <Button Content ="새로고침" Click="Re_Button_Click" Grid.Column="0" Grid.Row="1" Margin="80,0,80,0"/>
+            <Button Content="성적순 정렬" Grid.Column="2" Grid.Row="1" Margin="80,0,80,0" Click="S_Button_Click"/>
+            <ListView x:Name="Score_Viewer" VerticalAlignment="Center" HorizontalContentAlignment="Left" Grid.Row="2" Grid.ColumnSpan="3"/>
+        </Grid>
+       
     </StackPanel>
 </Window>
